--- a/popup.html
+++ b/popup.html
@@ -21,5 +21,10 @@
             <input type="text" class="form-control" id="toInput" placeholder="name@example.com">
           </div>
         </div>
+        <div class="form-row">
+          <div class="form-group">
+            <button type="button" class="btn btn-primary" id="addRedirectButton">Add Redirection</button>
+          </div>
+        </div>
 </body>
 </html>
