--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,8 @@
           <div class="form-group">
             <button type="button" class="btn btn-primary" id="addRedirectButton">Add Redirection</button>
           </div>
+          or &nbsp;
+          <a href="ListOfRedirections.html" target="_blank">view all redirections</a>
         </div>
 </body>
 </html>
