EVEN MORE functionality

--- a/ListOfRedirections.html
+++ b/ListOfRedirections.html
@@ -14,6 +14,7 @@
             <th scope="col">#</th>
             <th scope="col">Redirect From</th>
             <th scope="col">To</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody id="tableBody">
